--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,10 +31,13 @@
         display:block;
         margin-left:auto;
         margin-right:auto;
+        width: 50%;
     }
 
     .terminal-card {
       max-width: 95%;
+      /* max-height: 25%; */
+      overflow: hidden;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -52,7 +55,7 @@
         --mono-font-stack: Menlo, Monaco, Lucida Console, Liberation Mono,
           DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace,
           serif;
-        --background-color: #222225;
+        --background-color: #45608f;
         --page-width: 60em;
         --font-color: #e8e9ed;
         --invert-font-color: #222225;
