--- a/layouts/partials/recipe_summary.html
+++ b/layouts/partials/recipe_summary.html
@@ -12,7 +12,7 @@
         <hr />
         {{ end }}
         <center>
-          {{ .Summary }}
+          {{ .Summary  |  truncate 100 }}
         </center>
       </div>
     </div>
